# f2fs-tools_cygwin

./: .gitignore  .gitmodules  Android.bp  Android.mk  METADATA  Makefile  OWNERS  README.md  makef2fsimg.py
base/: Makefile  abi_compatibility.cpp  cmsg.cpp  file.cpp  mapped_file.cpp  threads.cpp
base/include/android-base/: file.h  mapped_file.h
e2fsprog/: Makefile
fsck/: fsck.c  mount.c  sload.c
include/: f2fs_fs.h
lib/: libf2fs.c  libf2fs_io.c
libcutils/: CMakeLists.txt  Makefile  cmake_install.cmake  fs_config.cpp  mmccmake  threads.cpp
liblog/: Makefile  logd_reader.cpp  logger.h  logger_read.cpp  logger_write.cpp  myboolean.h
liblog/include/: deftype.h
libselinux/: Makefile
libselinux/src/: android.c  procattr.c
mkfs/: f2fs_format.c  f2fs_format_main.c  f2fs_format_utils.c  f2fs_format_utils.h
openssl/Configurations/: 10-main.conf
openssl/providers/implementations/storemgmt/: winstore_store.c
sparse/: Makefile
tools/: check_f2fs.c
tools/f2fs_io/: Android.bp
tools/sg_write_buffer/: Android.bp
